--- a/public/assets/sass/style.scss
+++ b/public/assets/sass/style.scss
@@ -184,6 +184,7 @@ body {
                     font-weight: 700;
                     font-style: normal;
                     font-size: 20px;
+                    min-height: 48px;
                 }
 
                 .counter {
