--- a/resources/sass/lib/variable.scss
+++ b/resources/sass/lib/variable.scss
@@ -16,49 +16,49 @@ $font-quaternary: "Roboto Condensed", sans-serif;
 
 @font-face {
     font-family: "Montserrat";
-    src: url("../font/montserrat/Montserrat-Bold.ttf") format("truetype");
+    src: url("/assetsfont/montserrat/Montserrat-Bold.ttf") format("truetype");
     font-weight: 700;
     font-style: normal;
 }
 
 @font-face {
     font-family: "Montserrat";
-    src: url("../font/montserrat/Montserrat-Regular.ttf") format("truetype");
+    src: url("/assetsfont/montserrat/Montserrat-Regular.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: "Playfair Display";
-    src: url("../font/playfair_display/PlayfairDisplay-Regular.ttf") format("truetype");
+    src: url("/assetsfont/playfair_display/PlayfairDisplay-Regular.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: "Playfair Display";
-    src: url("../font/playfair_display/PlayfairDisplay-Italic.ttf") format("truetype");
+    src: url("/assetsfont/playfair_display/PlayfairDisplay-Italic.ttf") format("truetype");
     font-weight: 400;
     font-style: italic;
 }
 
 @font-face {
     font-family: "Raleway";
-    src: url("../font/raleway/Raleway-Regular.ttf") format("truetype");
+    src: url("/assetsfont/raleway/Raleway-Regular.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: "Raleway";
-    src: url("../font/raleway/Raleway-SemiBold.ttf") format("truetype");
+    src: url("/assetsfont/raleway/Raleway-SemiBold.ttf") format("truetype");
     font-weight: 600;
     font-style: normal;
 }
 
 @font-face {
     font-family: "Roboto Condensed";
-    src: url("../font/roboto_condensed/RobotoCondensed-Bold.ttf") format("truetype");
+    src: url("/assetsfont/roboto_condensed/RobotoCondensed-Bold.ttf") format("truetype");
     font-weight: 700;
     font-style: normal;
 }
